--- a/net-misc/htbinit/files/htbinit.rc
+++ b/net-misc/htbinit/files/htbinit.rc
@@ -1,9 +1,10 @@
 #!/sbin/runscript
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/htbinit/files/htbinit.rc,v 1.2 2007/01/11 18:46:10 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-misc/cvs-repo/gentoo-x86/net-misc/htbinit/files/htbinit.rc,v 1.3 2012/01/01 00:56:46 idl0r Exp $
 
-opts="start stop reload stats list timecheck"
+extra_commands="stats list timecheck"
+extra_started_commands="reload"
 
 depend() {
 	need net
